react-app/src/components/LandingPage/landing.css
@font-face {
	src: url(../fonts/Rodfat.ttf);
	font-family: 'rodfat';
}

.home-container {
	display: flex;
	flex-direction: row;
	align-items: flex-start;
	justify-content: space-around;
	overflow: hidden;
	margin: 0;
	padding: 0;
	width: 100%;
	position: relative;
	height: 100vh;
}

.title-container h1 {
	text-align: center;
	font-size: 8rem;
	/* z-index places it on top */
	z-index: 2;
	position: relative;
	/* background: #fff; */
	padding: 20px;
	margin: 15px;
	font-family: rodfat;
	/* color: rgb(190, 190, 190); */
	color: rgb(236, 233, 233);
}

.random-beer-container {
	z-index: 1;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	height: 60vh;
	width: 30vw;
	padding-top: 50px;
}

.random-beer-container > a {
	color: white;
}

.random-beer-container h3:hover {
	background-color: rgba(187, 186, 184, 0.5);
	color: rgb(14, 14, 14);
}

.random-beer-container h3 {
	border: 1px solid;
	padding: 5px;
	border-radius: 5px;
	font-size: 25px;
}

.random-beer-container * {
	z-index: 1;
}

.home-video-container {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	/* height: 0%; */
	/* overflow: hidden; */
}

.home-video-container video {
	width: 100%;
	height: 100%;
}

/* .home-video-container video > source {
} */

